--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^3.0.0-RC1"
+        "craftcms/cms": "^3.0.0-RC1",
+        "codeonyii/yii2-at-least-validator": "^1.2"
     },
     "autoload": {
         "psr-4": {
